<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <include
        android:id="@+id/header_VIEW"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_VIEW"
        style="@style/MainLayout">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cmck_black_800"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/filledBoxTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/et_mobile_number"
            style="@style/TextInputEditTextStyle"
            android:drawableRight="@drawable/ic_round_cancel"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_otp_to_this_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="16dp"/>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/btn_continue"
            style="@style/ButtonWithDrawable"
            android:layout_alignParentBottom="true"
            android:drawableRight="@drawable/ic_round_arrow_right"
            />

    </RelativeLayout>
</RelativeLayout>