<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/root_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.login.LoginOtpFragment">

    <include
        android:id="@+id/header_VIEW"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        layout="@layout/custom_toolbar"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_VIEW"
        style="@style/MainLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_enter_your_otp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cmck_black_800"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_verify_otp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/filledBoxTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/et_mobile_number"
                style="@style/TextInputEditTextStyle"
                android:drawableRight="@drawable/ic_round_cancel"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0.59"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/dark_gray"
                android:layout_marginTop="16dp"
                android:gravity="end"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_resend"
                android:layout_width="180dp"
                android:layout_height="56dp"
                android:text="@string/btn_resend"
                style="@style/ButtonWithDrawable"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:drawableRight="@drawable/ic_round_refresh"
                android:drawablePadding="20dp"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/btn_continue"
            style="@style/ButtonWithDrawable"
            android:layout_alignParentBottom="true"
            android:drawableRight="@drawable/ic_round_arrow_right"
            />

    </RelativeLayout>
</RelativeLayout>